[gd_scene load_steps=15 format=2]

[ext_resource path="res://Product/ui/Product11.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Product/Fonts/Roboto-Black.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Product/Fonts/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=5]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Product/Fonts/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Product/Fonts/Roboto-Light.ttf"

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Product/Fonts/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=11]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Product/Fonts/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=13]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 12 )

[node name="amazon" type="VBoxContainer"]
margin_top = 104.0
margin_right = 350.0
margin_bottom = 304.0
rect_min_size = Vector2( 350, 90 )
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="top_buffer" type="HBoxContainer" parent="."]
margin_right = 350.0
margin_bottom = 25.0
rect_min_size = Vector2( 350, 25 )

[node name="info" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 350.0
margin_bottom = 135.0
rect_min_size = Vector2( 350, 90 )

[node name="prod info" type="VBoxContainer" parent="info"]
margin_right = 200.0
margin_bottom = 106.0
rect_min_size = Vector2( 200, 90 )
focus_neighbour_top = NodePath("../daily info")
size_flags_vertical = 3

[node name="name" type="HBoxContainer" parent="info/prod info"]
margin_right = 200.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="info/prod info/name"]
margin_right = 111.0
margin_bottom = 36.0

[node name="prod_name" type="Label" parent="info/prod info/name/HBoxContainer"]
margin_right = 111.0
margin_bottom = 36.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Amazon"

[node name="price" type="HBoxContainer" parent="info/prod info"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 71.0

[node name="HBoxContainer2" type="HBoxContainer" parent="info/prod info/price"]
margin_right = 186.0
margin_bottom = 31.0

[node name="supply_price" type="Label" parent="info/prod info/price/HBoxContainer2"]
margin_right = 186.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "Supply Price: $30"

[node name="stock" type="HBoxContainer" parent="info/prod info"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 106.0

[node name="HBoxContainer2" type="HBoxContainer" parent="info/prod info/stock"]
margin_right = 190.0
margin_bottom = 31.0

[node name="stock" type="Label" parent="info/prod info/stock/HBoxContainer2"]
margin_right = 190.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 7 )
text = "Current Stock: %s"

[node name="input price" type="HBoxContainer" parent="info"]
margin_left = 204.0
margin_right = 344.0
margin_bottom = 106.0
rect_min_size = Vector2( 140, 90 )

[node name="buy_stock" type="LineEdit" parent="info/input price"]
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 45 )
custom_fonts/font = SubResource( 9 )
text = "100"
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="info/input price"]
margin_left = 104.0
margin_right = 140.0
margin_bottom = 106.0
text = "Buy"

[node name="bottom_buffer" type="VBoxContainer" parent="."]
margin_top = 139.0
margin_right = 350.0
margin_bottom = 205.0
rect_min_size = Vector2( 350, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="bottom_buffer"]
margin_right = 350.0
margin_bottom = 31.0

[node name="initial" type="Label" parent="bottom_buffer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 11 )
text = "Initial selling price: "

[node name="init_price" type="LineEdit" parent="bottom_buffer/HBoxContainer"]
margin_left = 204.0
margin_right = 262.0
margin_bottom = 31.0
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="bottom_buffer"]
margin_top = 35.0
margin_right = 350.0
margin_bottom = 66.0

[node name="final" type="Label" parent="bottom_buffer/HBoxContainer2"]
margin_right = 194.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 13 )
text = "Final selling price: "

[node name="final_price" type="LineEdit" parent="bottom_buffer/HBoxContainer2"]
margin_left = 198.0
margin_right = 256.0
margin_bottom = 31.0
caret_blink = true
caret_blink_speed = 0.5

[connection signal="text_entered" from="info/input price/buy_stock" to="." method="_on_buy_stock_text_entered"]
[connection signal="pressed" from="info/input price/Button" to="." method="_on_Button_pressed"]
